sample-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autostopping-sample
  labels:
    app: autostopping-sample
spec:
  replicas: 3
  selector:
    matchLabels:
      app: autostopping-sample
  template:
    metadata:
      labels:
        app: autostopping-sample
    spec:
      containers:
      - name: autostopping-sample
        image: nginx:1.14.2
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: autostopping-sample
spec:
  selector:
    app: autostopping-sample
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
